objects/Eligible_Domain__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Eligible Domains</relationshipLabel>
        <relationshipName>Eligible_Domains</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_Id__c</fullName>
        <formula>Account__r.Advisory_com_Organization_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When box is checked, this domain will be accepted as a valid domain for Advisory.com and EAB.com users.</inlineHelpText>
        <label>Domain Is Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Domain__c</fullName>
        <label>Qualified Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Eligible Domain</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Eligible Domain #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Qualified_Domain_Not_include_at_symbol</fullName>
        <active>true</active>
        <description>Warn the user if they attempt to add a qualified domain that includes the &quot;@&quot; symbol.</description>
        <errorConditionFormula>CONTAINS(Qualified_Domain__c , &apos;@&apos;)</errorConditionFormula>
        <errorDisplayField>Qualified_Domain__c</errorDisplayField>
        <errorMessage>Please remove the @ symbol from the qualified domain.</errorMessage>
    </validationRules>
</CustomObject>